# xnjb

./: .hgignore  .hgtags  Info.plist  XNJB_Prefix.pch  libmtp  libnjb  libusb  taglib
Resources/Bulgarian.lproj/: Credits.html  InfoPlist.strings  Localizable.strings
Resources/Danish.lproj/: InfoPlist.strings  Localizable.strings
Resources/Dutch.lproj/: Credits.html  Localizable.strings
Resources/English.lproj/: Localizable.strings
Resources/Finnish.lproj/: Localizable.strings
Resources/French.lproj/: Credits.html  Localizable.strings
Resources/German.lproj/: InfoPlist.strings  Localizable.strings
Resources/Italian.lproj/: Localizable.strings
Resources/Portuguese.lproj/: Localizable.strings
Resources/Spanish.lproj/: Credits.html  InfoPlist.strings  Localizable.strings
Resources/Swedish.lproj/: InfoPlist.strings  Localizable.strings
Resources/images/: README  arrow.graffle  cancelled.graffle  cancelled.tiff  cross.graffle  cross.tiff  down-arrow.tiff  failure.graffle  failure.tiff  icon.graffle  icon.icns  icon.tiff  minus.graffle  minus.tiff  njb3.tiff  plus.graffle  plus.tiff  queued.graffle  queued.tiff  running.graffle  running.tiff  success.graffle  success.tiff  tag.graffle  tag.tiff  up-arrow.tiff
XNJB.xcodeproj/: project.pbxproj  richard.mode1  richard.mode1v3  richard.pbxuser
XNJB.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
docs/: AUTHORS  Authors.rtf  CHANGELOG  COPYING  Change Log.rtf  Copying.rtf  INSTALL  Install.rtf  KNOWNISSUES  Known Issues.rtf  THANKS  TODO
gnomad2/: wmaread.c  wmaread.h
libmtp-cvs/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  hotplug.sh  libmtp.pc  libtool
libmtp-cvs/CVS/: Entries
libmtp-cvs/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libmtp-cvs/doc/: Doxyfile  Makefile  Makefile.in
libmtp-cvs/examples/: Makefile  Makefile.in
libmtp-cvs/src/: .#libmtp.c.1.174  .#libmtp.c.1.177  .#libmtp.c.1.178  .#libmtp.c.1.182  .#libmtp.c.1.183  .#libmtp.c.1.185  .#libmtp.c.1.197  .#libmtp.c.1.204  .#libmtp.c.1.212  .#libmtp.c.1.242  .#libmtp.c.1.244  .#libmtp.c.1.264  .#libmtp.c.1.270  .#libusb-glue.c.1.139  .#libusb-glue.c.1.150  .#libusb-glue.c.1.153  .#libusb-glue.c.1.166  .#libusb-glue.c.1.170  .#libusb-glue.c.1.172  .#libusb-glue.c.1.174  .#libusb-glue.c.1.176  .#libusb-glue.c.1.179  .#libusb-glue.c.1.183  .#libusb-glue.c.1.189  .#libusb-glue.c.1.194  .#libusb-glue.c.1.195  .#libusb-glue.c.1.196  .#libusb-glue.c.1.198  .#libusb-glue.c.1.202  .#libusb-glue.c.1.204  .#libusb-glue.c.1.205  .#libusb-glue.c.1.209  .#libusb-glue.c.1.212  .#libusb-glue.c.1.214  .#libusb-glue.c.1.247  .#libusb-glue.c.1.261  .#libusb-glue.c.1.265  .#libusb-glue.c.1.266  .#libusb-glue.c.1.267  .#libusb-glue.h.1.42  (+17 more)
libnjb-2.2.6/: .cvsignore  AUTHORS  ChangeLog  ChangeLog-old  FAQ  HACKING  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure.ac  hotplug.sh  hotplug.sh.in  libnjb.fdi  libnjb.pc  libnjb.pc.in  libtool  nomad.rules  nomad.usermap  nomadjukebox  nomadjukebox.in
libnjb-2.2.6/CVS/: Entries  Repository
libnjb-2.2.6/autom4te.cache/: output.0  traces.0
libnjb-2.2.6/debian/: .cvsignore  changelog  control  copyright  libnjb-dev.install  libnjb-hotplug.install  libnjb4.docs  rules  watch
libnjb-2.2.6/debian/CVS/: Entries  Repository
libnjb-2.2.6/doc/: .cvsignore  Doxyfile  Doxyfile.in  Makefile  Makefile.in  examples.h  mainpage.h
libnjb-2.2.6/doc/CVS/: Entries  Repository
libnjb-2.2.6/sample/: .cvsignore  Makefile  Makefile.am  Makefile.in  common.h  cursesplay.c  delfile.c  deltr.c  dumpeax.c  dumptime.c  files.c  fwupgrade.c  getfile.c  getowner.c  gettr.c  getusage.c  handshake.c  pl.c  play.c  playlists.c  sendfile.c  sendtr.c  setowner.c  setpbm.c  settime.c  tagtr.c  tracks.c
libnjb-2.2.6/sample/CVS/: Entries  Repository
libnjb-2.2.6/src/: .#Makefile.am.1.5  .#base.c.1.62  .#libnjb.h.in.1.82  .#procedure.c.1.160  .#protocol3.c.1.168  .#protocol3.h.1.89  .cvsignore  Makefile  Makefile.am  Makefile.in  base.c  base.h  byteorder.c  byteorder.h  datafile.c  datafile.h  defs.h  eax.c  eax.h  ioutil.c  ioutil.h  libnjb.h  libnjb.h.in  libnjb.sym  njb_error.c  njb_error.h  njbtime.c  njbtime.h  playlist.c  playlist.h  procedure.c  procedure.h  protocol.c  protocol.h  protocol3.c  protocol3.h  songid.c  songid.h  unicode.c  unicode.h  (+2 more)
libnjb-2.2.6/src/CVS/: Entries  Repository  Root
libnjb-2.2.6/windows/: README.TXT  getopt.c  getopt.h  libnjb.def  libnjb.h  libnjb.inf  libnjb.sln  libnjb.vcproj  sample.sln
libnjb-2.2.6/windows/CVS/: Entries  Repository
libnjb-2.2.6/windows/samples/: delfile.vcproj  deltr.vcproj  dumpeax.vcproj  dumptime.vcproj  files.vcproj  fwupgrade.vcproj  getfile.vcproj  getowner.vcproj  gettr.vcproj  getusage.vcproj  handshake.vcproj  pl.vcproj  play.vcproj  playlists.vcproj  sendfile.vcproj  sendtr.vcproj  setowner.vcproj  setpbm.vcproj  settime.vcproj  tagtr.vcproj  tracks.vcproj
libnjb-2.2.6/windows/samples/CVS/: Entries  Repository
libusb-0.1.10a/: Makefile  config.status  libtool  usb.h
libusb-0.1.10a/.deps/: descriptors.Plo  error.Plo  usb.Plo  usbpp.Plo
libusb-0.1.10a/doc/: Makefile
libusb-0.1.10a/tests/: Makefile
src/: Album.h  Album.m  DataFile.h  DataFile.m  DataTab.h  DataTab.m  Directory.h  Directory.m  DragDropTableView.h  DragDropTableView.m  DrawerController.h  DrawerController.m  DuplicateItemsTab.h  DuplicateItemsTab.m  DuplicateTrackFinder.h  DuplicateTrackFinder.m  FileSystemBrowser.h  FileSystemBrowser.m  FileSystemBrowserCell.h  FileSystemBrowserCell.m  FileSystemBrowserNode.h  FileSystemBrowserNode.m  FilesizeFormatter.h  FilesizeFormatter.m  ID3Tagger.h  ID3Tagger.mm  InfoTab.h  InfoTab.m  MP3Length.h  MP3Length.m  MainController.h  MainController.m  MenuController.h  MenuController.m  MusicTab.h  MusicTab.m  MyBool.h  MyBool.m  MyFileTab.h  MyFileTab.m  (+52 more)
taglib-1.6.1/: Info.plist  Makefile  config.h  config.status  libtool  taglib-config  taglib.pc  taglib.pro
taglib-1.6.1/autom4te.cache/: output.0  requests  traces.0  traces.1
(+218 files in other folders)
